cmake_minimum_required(VERSION 3.16)
project(c_prog C)

set(CMAKE_C_STANDARD 99)

add_executable(c_prog main.c)
add_executable(t1 tutorials/t1.c)
add_executable(t2 tutorials/t2.c)
add_executable(t3 tutorials/t3.c)
add_executable(t4 tutorials/t4.c)
add_executable(t5 tutorials/t5.c)
add_executable(t6 tutorials/t6.c)
add_executable(t7 tutorials/t7.c)
add_executable(t8 tutorials/t8.c)
add_executable(t9 tutorials/t9.c)
add_executable(t10 tutorials/t10.c)
add_executable(t11 tutorials/t11.c)
add_executable(t12 tutorials/t12.c)
add_executable(t13 tutorials/t13.c)
add_executable(t14 tutorials/t14.c)